--- a/Backend/ERP.Api/appsettings.json
+++ b/Backend/ERP.Api/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
     "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=ADMINH2;Database=ERPEnterprise;Trusted_Connection=True;TrustServerCertificate=true;MultipleActiveResultSets=true"
-    }
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=HIEUDAY;Database=QUANLY_ERPH1Enterprise;Trusted_Connection=True;TrustServerCertificate=true;MultipleActiveResultSets=true"
+  }
+
 }
